--- a/contract/package.json
+++ b/contract/package.json
@@ -1,19 +1,18 @@
 {
     "name": "voterContract",
-    "version": "1.0",
+    "version": "1.0.0",
     "description": "DeCent Vote Contract",
     "main": "index.js",
     "engines": {
         "node": ">=8",
         "npm": ">=5"
     },
-    "scripts": {        
+    "scripts": {
         "start": "fabric-chaincode-node start"
     },
     "engineStrict": true,
     "dependencies": {
-        "fabric-contract-api": "1.4.1",
-        "fabric-shim": "^1.4.1",
+        "fabric-contract-api": "^1.4.1",
         "mem": "^5.1.1",
         "os-locale": "^4.0.0"
     },
@@ -28,7 +27,7 @@
         "winston": "^3.2.1"
     },
     "nyc": {
-        "exclude": [            
+        "exclude": [
             "coverage/**",
             "test/**"
         ]
