--- a/contract/package.json
+++ b/contract/package.json
@@ -13,6 +13,7 @@
     "engineStrict": true,
     "dependencies": {
         "fabric-contract-api": "^1.4.1",
+        "fabric-shim": "^1.4.1",
         "mem": "^5.1.1",
         "os-locale": "^4.0.0"
     },
